crates/tests/fixtures/compile_errors/call_builtin_object.fe

contract Bar:
  pub def test():
    block.foo()